# extant-email

./: .gitignore  next.config.js  package.json  stitches.config.ts  tsconfig.json
api/: Cargo.toml  email.rs
backend/: Cargo.toml  Dockerfile  fly.toml
backend/src/: lib.rs  mail.rs  main.rs  smtp.rs  util.rs  yahoo.rs
hooks/: useLocalStorage.ts
pages/: _app.tsx  _document.tsx  index.tsx
primitives/: button.tsx  chart.tsx  csv-dialog.tsx  dialog.tsx  table.tsx  toggle-group.tsx
styles/: globalStyles.tsx
types/: react-table-config.d.ts  twin.d.ts
