[package]
name = "extant"
version = "1.0.0"
authors = ["Fredrik Pettersen <fredrik.fumler@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.9"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
check-if-email-exists = "0.8"
serde = { version = "1", features = ["derive"] }
env_logger = "0.9"
cached = "0.25.0"
async-std-resolver = "0.20.3"
async-recursion = "0.3"
log = "0.4.14"
gethostname = "0.2.1"
rand = "0.8.4"

[patch.crates-io]
check-if-email-exists = { git = 'https://github.com/dblanovschi/check-if-email-exists' }