[package]
name = "extant"
version = "1.0.0"
authors = ["Fredrik Pettersen <fredrik.fumler@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.9"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
check-if-email-exists = "0.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
env_logger = "0.9"
cached = "0.25.0"
async-std = "1.10.0"
async-std-resolver = "0.20.3"
async-recursion = "0.3"
async-smtp = { version = "0.4.0", features = ["socks5"] }
regex = "1.4.6"
reqwest = { version = "0.11.4", features = ["json", "socks"] }
log = "0.4.14"
gethostname = "0.2.1"
rand = {version = "0.8.3", features = ["small_rng"] }
trust-dns-proto = "0.20.3"
fast-socks5 = "0.4.3"

[patch.crates-io]
check-if-email-exists = { git = 'https://github.com/dblanovschi/check-if-email-exists' }